fix layout manager converter. accept package prefix or no package prefix